tests/paczka1/fuzzy1/94945595.err
Error in line 8: tpvGe A199 2,7
Error in line 28: M0eyBBC A199 20,9
